--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.body{overflow-x: hidden; position: relative;}
+body{overflow-x: hidden; position: relative;}
 
 .modal{
     position: absolute; left: 50%; top: 15em;
@@ -59,20 +59,16 @@ header{
     z-index: 10;
 }
 
-.logo{width: 100%; /* border: 1px solid red; */ height: 100%;}
+/* .logo{width: 100%; height: 100%;} */
 .logo a{
-    /* border: 1px solid red; */
     display: inline-block;
     padding: 0 10px;
-    width: 10%;
-    height: 100%;
-    /* background: url("../images/logo.png") no-repeat; */
-    /* text-indent: -9999px; */
+    width: 130px;
 }
 .logo a i{background: url("../images/logo.png") no-repeat center;
-    background-size: 60%;
-    display: block; width: 100%; height: 100%;
-    /* border: 1px solid red; */
+    background-size: contain;
+    display: block; width: 100%;
+    padding: 15px 0;
     text-indent: -9999px;
 }
 .logo a.on{
